// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display renders 0 1`] = `
Array [
  .c0 {
  display: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`display renders function 1`] = `
Array [
  .c0 {
  display: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display: has;
}

<div
    className="c0"
  />,
  .c0 {
  display: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display: has;
}

<div
    className="c0"
  />,
]
`;

exports[`display renders invalid theme path 1`] = `
Array [
  .c0 {
  display: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`display renders negative number 1`] = `
Array [
  .c0 {
  display: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  display: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`display renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    display: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    display: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`display renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    display: July;
  }
}

@media April {
  .c0 {
    display: August;
  }
}

@media January {
  .c0 {
    display: September;
  }
}

@media April {
  .c0 {
    display: November;
  }
}

@media June {
  .c0 {
    display: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    display: July;
  }
}

@media April {
  .c0 {
    display: August;
  }
}

@media January {
  .c0 {
    display: September;
  }
}

@media April {
  .c0 {
    display: November;
  }
}

@media June {
  .c0 {
    display: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display: January;
  }
}

@media April {
  .c0 {
    display: December;
  }
}

@media January {
  .c0 {
    display: April;
  }
}

@media April {
  .c0 {
    display: May;
  }
}

@media June {
  .c0 {
    display: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display: January;
  }
}

@media April {
  .c0 {
    display: December;
  }
}

@media January {
  .c0 {
    display: April;
  }
}

@media April {
  .c0 {
    display: May;
  }
}

@media June {
  .c0 {
    display: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`display renders postitive number 1`] = `
Array [
  .c0 {
  display: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  display: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`display renders string 1`] = `
Array [
  .c0 {
  display: July;
}

<div
    className="c0"
  />,
  .c0 {
  display: July;
}

<div
    className="c0"
  />,
  .c0 {
  display: June;
}

<div
    className="c0"
  />,
  .c0 {
  display: June;
}

<div
    className="c0"
  />,
]
`;

exports[`display renders valid theme path 1`] = `
Array [
  .c0 {
  display: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
